# Ground-Removal

./: README.md
bare_earth/: CMakeLists.txt  auto.bag  auto1.2.orig.bag  auto1.2.orig.orig.bag  auto_main.bag  auto_main.orig.bag  bag_to_pcd.py  bagtopcd.py  bare_earth.cpp  pmf_segmentation.py
